--- a/ringoffire/src/app/game/game.component.scss
+++ b/ringoffire/src/app/game/game.component.scss
@@ -1,4 +1,4 @@
-.field{
+.field {
     width: 100vw;
     height: 100vh;
     max-width: 100%;
@@ -6,64 +6,103 @@
     justify-content: center;
     align-items: center;
     background-image: url(./../../assets/img/board.jpg);
+    background-repeat: round;
 }
 
-.card-stack{
+.card-stack {
     position: relative;
-    img{
+
+    img {
         position: absolute;
         width: 120px;
+        bottom: -130px;
     }
 }
 
-.top-card{
+.top-card {
     cursor: pointer;
     transition: all 125ms ease-in-out;
-    &:hover{
+
+    &:hover {
         transform: scale(1.1) translateY(-10px);
     }
 }
 
-.pick-card{
+.pick-card {
     transition: all 125ms ease-in-out;
     animation: pick-card-animation 1s ease-in-out;
-    transform: scale(1) translateX(-150px);
+    transform: scale(1) translateX(-130px);
+    right: -60px;
 }
 
-@keyframes pick-card-animation{
-    0%{
+@keyframes pick-card-animation {
+    0% {
         transform: scale(1.1);
     }
-    50%{
+
+    50% {
         transform: scale(1.2);
     }
-    100%{
-        transform: scale(1) translateX(-150px);
+
+    100% {
+        transform: scale(1) translateX(-130px);
     }
 }
 
-.played-card{
-    right: 25px;
-    transform: scale(1) translateX(-150px);
+.played-card {
+    right: -40px;
+    transform: scale(1) translateX(-60px);
 }
 
-.player-position{
+.player-position {
     position: absolute;
-    border-top-left-radius: 50px;
+    border-bottom-right-radius: 50px;
     border-bottom-left-radius: 50px;
-    right: 0;
     background-image: url(./../../assets/img/player-background.jpg);
+
+    @media (min-width:720px) {
+        border-bottom-right-radius: 0px;
+        border-top-left-radius: 50px;
+        border-bottom-left-radius: 50px;
+        right: 0;
+
+    }
 }
 
-.btn-add{
+.btn-add {
     position: absolute;
     right: 32px;
     bottom: 32px;
+
+    @media (max-width: 720px) {
+        top: 155px;
+        bottom: 0;
+    }
 }
 
-.pin-bottom{
+.pin-bottom {
     position: absolute;
     bottom: 32px;
     left: 100px;
     right: 100px;
+
+    @media (max-width: 720px) {
+        left: 0px;
+        right: 0px;
+        bottom: 0px;
+    }
+}
+
+.scroll-container{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    display: flex;
+    overflow-x: scroll;
+    overflow-y: hidden;
+
+    app-player-mobile{
+        margin: 0 16px;
+    }
 }
