--- a/ringoffire/src/app/game/game.component.html
+++ b/ringoffire/src/app/game/game.component.html
@@ -1,19 +1,25 @@
 <app-player *ngFor="let player of game.players; let i = index" [ngStyle]="{'top.px' : 100 + (i * 90)}"
-    class="player-position" [playerActive]="i == game.currentPlayer" [name]="player"></app-player>
+    class="player-position hide-mobile" [playerActive]="i == game.currentPlayer" [name]="player"></app-player>
+
+<div class="scroll-container heigt-desktop">
+    <app-player-mobile *ngFor="let player of game.players; let i = index"
+        [ngStyle]="{'left.px' : 10 + (i * 90), 'top.px' : 0}" class="hide-desktop"
+        [playerActive]="i == game.currentPlayer" [name]="player"></app-player-mobile>
+</div>
 
 <div class="field">
     <div class="card-stack">
-        <img [ngStyle]="{'right.px' : i * 5}" *ngFor="let c of [0,1,2,3,4]; let i = index"
+        <img [ngStyle]="{'right.px' : (i - 26) * 5}" *ngFor="let c of [0,1,2,3,4]; let i = index"
             src="./../../assets/img/cards/card_cover.png">
-        <img (click)="takeCard()" class="top-card" style="right: 25px;" src="./../../assets/img/cards/card_cover.png">
+        <img (click)="takeCard()" class="top-card" style="right: -110px;" src="./../../assets/img/cards/card_cover.png">
         <img *ngFor="let card of game.playedCards" class="played-card" src="./../../assets/img/cards/{{ card }}.png"
             alt="">
-        <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 25px;"
-            src="./../../assets/img/cards/{{ currentCard }}.png">
+        <img (click)="takeCard()" *ngIf="game.pickCardAnimation" class="pick-card" style="right: -110px;"
+            src="./../../assets/img/cards/{{ game.currentCard }}.png">
     </div>
 </div>
 
-<app-game-info [card]="currentCard" class="pin-bottom"></app-game-info>
+<app-game-info [card]="game.currentCard" class="pin-bottom"></app-game-info>
 
 <button mat-fab color="primary" (click)="openDialog()" class="btn-add">
     <mat-icon>add</mat-icon>
